make ServerContext class

--- a/config_file/default.conf
+++ b/config_file/default.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name localhost;
+  host localhost;
 
   location / {
     error_page 500 500.html;
@@ -29,7 +29,7 @@ server {
 
 server {
   listen 80;
-  server_name www.webserv.com webserv.com;
+  host www.webserv.com webserv.com;
 
   location / {
     root /var/www/html;
@@ -44,7 +44,7 @@ server {
 
 server {
   listen 8080;
-  server_name localhost;
+  host localhost;
 
   location / {
     root /var/www/html;
@@ -56,6 +56,6 @@ server {
   listen 9090;
 
   location / {
-    return http://localhost:8080/;
+    redirect http://localhost:8080/;
   }
 }
