--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,28 @@
 		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"__bit_reference": "cpp",
+		"__hash_table": "cpp",
+		"__locale": "cpp",
+		"__node_handle": "cpp",
+		"__split_buffer": "cpp",
+		"__tree": "cpp",
+		"__verbose_abort": "cpp",
+		"bitset": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"execution": "cpp",
+		"iomanip": "cpp",
+		"ios": "cpp",
+		"locale": "cpp",
+		"map": "cpp",
+		"mutex": "cpp",
+		"print": "cpp",
+		"queue": "cpp",
+		"ratio": "cpp",
+		"stack": "cpp",
+		"variant": "cpp"
 	},
 	"[cpp]": {
 		"editor.guides.indentation": false
